# Utama-Core

./: .gitignore  .pre-commit-config.yaml  MPC_CPP_PORT_NOTES.md  PipelineMethod.md  README.md  clean-dwa-3.csv  compare_controllers.py  conftest.py  demo_ball_placement.py  demo_custom_referee.py  demo_exhibition_road.py  demo_referee_gui_rsim.py  filter_config.toml  filter_test.py  log  log.txt  main.py  noisy-10-dwa-pc-r-ball.csv  noisy-10-kalman-dwa-pc-r-ball.csv  pixi.toml  pyproject.toml  res  robocup-ssl.xml  ruff.toml  setup.cfg  sim_run.prof  start_test_env.sh  test_mpc_integration.py  visualize_positions.ipynb
.github/: copilot-instructions.md
assets/: PipelineMethod.md
config/: defaults.py  settings.py  starting_formation.py
decision_maker/: README.md  robot_entities.py  role.py
docs/: PipelineMethod.md  SSL_dataflow diagram.drawio  conf.py  custom_referee.md  custom_referee_design_decisions.md  custom_referee_gui.md  entities.data.command.rst  entities.data.raw_vision.rst  entities.data.rst  entities.game.rst  entities.rst  global_utils.rst  index.rst  modules.rst  rationale.md  receivers.rst  referee_integration.md  run.rst
entities/: README.md
global_utils/: mapping_utils.py  math_utils.py
kalman_test/: clean-dwa-pc-r-2.csv  clean-dwa-pc-r-3.csv  clean-dwa-pc-r-ball-2.csv  clean-dwa-pc-r-nofilter.csv  clean-dwa-pc-r.csv  kalman_ball.ipynb  kalman_ball_vanish.ipynb  kalman_point_cycle.ipynb  kalman_point_cycle_th.ipynb  kalman_point_cycle_vanish.ipynb  noisy-10-dwa-pc-r-2.csv  noisy-10-dwa-pc-r-3.csv  noisy-10-dwa-pc-r-ball-2.csv  noisy-10-dwa-pc-r-ball.csv  noisy-10-dwa-pc-r.csv  noisy-10-kalman-dwa-pc-r-2.csv  noisy-10-kalman-dwa-pc-r-3.csv  noisy-10-kalman-dwa-pc-r-ball-2.csv  noisy-10-kalman-dwa-pc-r-ball.csv  noisy-10-kalman-dwa-pc-r.csv  vanish-50-kalman-dwa-pc-r-ball.csv  vanish-50-kalman-dwa-pc-r.csv
proto/: ssl_gc_referee_message.proto  ssl_simulation_control.proto
receivers/: referee_receiver.py  vision_receiver.py
refiners/: base_refiner.py  has_ball.py  position.py  referee.py  robot_info.py  velocity.py
replay/: __init__.py  replay_player.py  replay_reader.py  replay_writer.py
rsoccer_simulator/: .gitignore  README.md
run/: __init__.py  abstract_test_manager.py  game_gater.py  main.py  run_strategy.py  strategy_runner.py
scripts/: ensure_mpc_cpp.sh
src/: main.py
strategy/: README.md  abstract_strategy.py  behaviour_tree_strategy.py  one_robot_placement_strategy.py  role.py  startup_strategy.py  strategy.py
team_controller/: README.md
temp/: Filters.py  clean-raw.csv  noisy-raw.csv  visualize_positions.ipynb
test/: __init__.py
utama_core/motion_planning/src/mpc_cpp/: CMakeLists.txt  pyproject.toml
utama_core/motion_planning/src/mpc_cpp/src/: OmniMPC.cpp  OmniMPC.hpp  bindings.cpp
vision/: vision_processor.py  vision_receiver.py
vision_data/: clean-dwa-2.csv  clean-dwa-3.csv  clean-dwa-ds-g.csv  clean-dwa-ss-r-3.csv  clean-dwa-ss-r.csv  clean-dwa.csv  clean-filtered.pkl  clean-fir-dwa-ss-r-after.csv  clean-fir-dwa-ss-r-before.csv  clean-kalman-dwa-ss-g.csv  (+78 more)
(+734 files in other folders)
