[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Utama"
version = "1.0.0"
description = "Imperial RoboCup SSL 25 Software Algorithms Codebase."
authors = [
    { name = "Fred Huang", email = "fred.huang23@imperial.ac.uk" }
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
