[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Utama-Core"
version = "1.0.0"
description = "Imperial RoboCup SSL 25 Software Algorithms Codebase."
readme = "README.md"
authors = [
    { name = "Fred Huang", email = "fred.huang23@imperial.ac.uk" },
    { name = "Joel Ng", email = "zhi-ming.ng22@imperial.ac.uk" },
    { name = "Isaac Yong",  email = "isaac.yong24@imperial.ac.uk" },
    { name = "Hamish Starling", email = "hamish.starling22@imperial.ac.uk" },
    { name = "Luke Moran", email = "luke.moran22@imperial.ac.uk" },
    { name = "Sadig Sadikhzada", email = "sadig.sadikhzada23@imperial.ac.uk" },
    { name = "Li Han", email = "han.li124@imperial.ac.uk" }
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
